--- a/index.html
+++ b/index.html
@@ -14,21 +14,15 @@
             
             <div class="left-image">
                 <a href="https://ibb.co/s6QbWXS"><img src="https://i.ibb.co/s6QbWXS/IMG-20220523-031329-645-modified.png" alt="IMG-20220523-031329-645-modified" border="0" /></a>
-                <h1>Mohammed Al Amine Bennani </h1>
-            </div>
-            <div class="Personal">
-                <ul>
-                    <li> <i class="fa-solid fa-phone"></i> +212 615-187961</li>
-                    <li><i class="fa-solid fa-envelope"></i> 2000bennani@gmail.com</li>
-                    <li><i class="fa-solid fa-location-dot"></i> 104 Imm Lot Ennacer Elmoustakbal, Temara</li>
-                </ul>
-                <hr>
+                <h1>Mohammed Al Amine Bennani</h1>
             </div>
             <div class="Skills">
                 <h2><i class="fa-solid fa-gear"></i>&nbspSkills</h2>
-                <li>C/C++ <progress max="100" value="70"></progress></li>
-                <li>WordPress <progress max="100" value="50"></progress></li>
-                <li>Sql <progress max="100" value="40"></progress></li>
+                <ul>C/C++</ul>
+                <ul>Python</ul>
+                <ul>Sql</ul>
+                <ul>WordPress</ul>
+                <ul>HTML/CSS</ul>
             </div>
             <div class="Languages">
                 <h3><i class="fa-solid fa-language"></i>&nbspLanguages</h3>
@@ -37,26 +31,28 @@
                 <li>French   - Intermediate</li>
                 <li>Turkish  - Basic</li><br><br><br><br><br>
             </div>
-            <footer>
-                <a href="https://wa.me/+905344700857" target=""><i class="fa-brands fa-whatsapp"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                <a href="https://linkedin.com/in/mohammed-al-amine-bennani-98b0381b7" target=""><i class="fa-brands fa-linkedin"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                <a href="https://github.com/Trickerx" target=""><i class="fa-brands fa-github"></i></a>
-            </footer>
+
         </section>
         <section class="right">
             <div class="Experience">
                 <h4><i class="fa-solid fa-briefcase"></i>&nbspWork Experience</h4></ul>
+                <h5><strong>DevoTeam - </strong><i>CYBERSECURITY INTERN</i></h5>
+                    <h11><i class="fa-solid fa-calendar-days"></i> August 2022 - September 2022</h11>
+                    <ul>Mentored by an information systems security engineer and gained a general view of the cyber security field:</ul>
+                        <li>Networks: Briefly went through the CCNA certification materials, including the OSI and TCP/IP Models; Configured and set-up routers, devices, switches, hubs and servers.</li>
+                        <li>Operating Systems: Installed and configured the following operating systems:  Windows 10, Linux.</li>
+                        <li>Servers: Configured the Active Directory (including Proxy, DHCP, DNS Servers) of Windows Server 2016, ESXI hypervisor</li>
+                        <li>Linux: </li>
+                        <ul>1. &nbspLearned basic Linux commands.</ul>
+                        <ul>2. &nbspLearned to set up a local lab to achieve the following goals: Scanning an IP address and identifying its vulnerabilities.</ul>
+                        <ul>3. &nbspEncrypted files for safety purposes.</ul>
+                        <ul>4. &nbspCreated a trojan and a phishing website for practice.</ul>
                 <h5><strong>Nobel   Explorers - </strong><i>INTERNSHIP</i></h5>
                     <h11><i class="fa-solid fa-calendar-days"></i> February 2022 - May 2022</h11>
                     <ul>A global internship program where I had the opportunity to learn soft and hard skills and work in an international team. It was a peer-to-peer education system where I achieved the following tasks:</ul>
                         <li>Learning several courses in a short time span.</li>
                         <li>Sharing projects based on the course with the Nobel community.</li>
-                        <li>Summarizing and simplifying the courses, and explaining them to other interns. The courses I took:</li>
-                        <ul>
-                            <li>1.  Introduction to Web Design & Coding.</li>
-                            <li>2.  Pitch and Presentation.</li>
-                            <li>3.  Internet Investigator.</li>
-                        </ul>   
+                        <li>Summarizing and simplifying the courses, and explaining them to other interns. The courses I took:</li> 
                 <h6><strong> YD Yazılım ve Teknoloji A.Ş. - </strong><i>TRANSLATOR</i> </h6>
                 <h12><i class="fa-solid fa-calendar-days"></i> December 2021 - January 2022</h12>
                     <li>A translation project where I had to translate an excel document containing +2000 words and phrases from English to Arabic. Their product is an online learning platform under the name Studia LMS. It offers online training tools with rich content for their customers.</li>
@@ -75,7 +71,10 @@
                     <ul><i>HIGH SCHOOL DIPLOMA</i></ul>
             </div>
         </section>
+        <footer>
+            <a href="https://www.linkedin.com/in/mohammed-al-amine-bennani" target=""><i class="fa-brands fa-linkedin"></i></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <a href="https://github.com/M-AA-B" target=""><i class="fa-brands fa-github"></i></a>
+        </footer>
     </main>
-    
 </body>
 </html>
