--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li>Summarizing and simplifying the courses, and explaining them to other interns. The courses I took:</li> 
                 <h6><strong> YD Yazılım ve Teknoloji A.Ş. - </strong><i>TRANSLATOR</i> </h6>
                 <h12><i class="fa-solid fa-calendar-days"></i> December 2021 - January 2022</h12>
-                    <li>A translation project where I had to translate an excel document containing +2000 words and phrases from English to Arabic. Their product is an online learning platform under the name Studia LMS. It offers online training tools with rich content for their customers.</li>
+                    <ul>A translation project where I had to translate an excel document containing +2000 words and phrases from English to Arabic. Their product is an online learning platform under the name Studia LMS. It offers online training tools with rich content for their customers.</ul>
 
             </div>
             <div class="Education">
